<resources>
    <string name="app_name">PhotoRecogTest</string>
    <string name="photo">photo</string>
    <string name="titleText">Facial Recognition App</string>
    <string name="addPeopleButtonText">Add People!</string>
    <string name="takePhoto">Take Photo</string>
    <string name="speakName">Speak Name</string>
    <string name="addPerson">Add Person with Model ID</string>
    <string name="modelId">Model ID</string>
    <string name="Name">Name</string>
    <string name="Add">Add</string>
    <string name="Back">Back</string>
    <string name="RunModel">Run Model</string>
</resources>