<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/darkModeBackground"
    android:orientation="vertical">

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/takePhoto"
        android:textColor="@color/button_text_color"></Button>

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="317dp"
        android:layout_height="338dp"
        android:src="@drawable/hangtechh"></ImageView>

    <Button
        android:id="@+id/speakButton"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/speakName"
        android:textColor="@color/button_text_color" />

    <Button
        android:id="@+id/callModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RunModel" />


</LinearLayout>
