<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkModeBackground"

    tools:context=".NameInsertion">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="215dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/addPeopleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPerson"
            android:textAlignment="center"
            android:textColor="@color/button_text_color" />

        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_text_color"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Name"
            android:textColor="@color/button_text_color" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_text_color"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/modelId"
            android:textColor="@color/button_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/addPersonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/Add"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_color"
                android:text="@string/Back"
                android:textColor="@color/button_text_color" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>